add register and home page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="red">#f4516c</color>
+    <color name="white">#FFFFFF</color>
+    <color name="blue">#36a3f7</color>
+    <color name="green">#34bfa3</color>
 </resources>
