--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="blue">#36a3f7</color>
     <color name="green">#34bfa3</color>
+    <color name="black">#133337</color>
 </resources>
