--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
                   android:orientation="horizontal" app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="326dp"
-                  app:layout_constraintTop_toBottomOf="@+id/btn_register" android:id="@+id/linearLayout">
+                   android:id="@+id/linearLayout">
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:gravity="center"
@@ -22,6 +22,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/blue"
                     android:text="@string/home"
                     android:gravity="center"
 
