add profile activity and logout dialog

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="blue">#36a3f7</color>
     <color name="green">#34bfa3</color>
     <color name="black">#133337</color>
+    <color name="grey">#cfd4d4</color>
 </resources>
