add settings and custom infowindow in google map

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="green">#34bfa3</color>
     <color name="black">#133337</color>
     <color name="grey">#cfd4d4</color>
+    <color name="background">#F8F9FA</color>
 </resources>
