--- a/app/src/main/res/layout/activity_circle.xml
+++ b/app/src/main/res/layout/activity_circle.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".circle.CircleActivity">
+    <RelativeLayout android:id="@+id/rl_circle_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:elevation="2dp"
+                    android:background="@color/background"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginTop="10dp"
+                  android:layout_marginStart="20dp"
+                  android:layout_marginBottom="10dp"
+                  android:text="@string/circle"
+                  android:textColor="@color/blue"
+                  android:textSize="@dimen/page_title_textsize"/>
 
+    </RelativeLayout>
     <TextView
             android:text="@string/circle_list_friend"
             android:layout_width="wrap_content"
@@ -20,13 +37,14 @@
             android:layout_marginEnd="170dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="17dp" app:layout_constraintHorizontal_bias="0.185"
-            android:layout_marginTop="137dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
+            android:layout_marginTop="90dp" app:layout_constraintTop_toBottomOf="@+id/rl_circle_title"/>
     <LinearLayout android:layout_width="0dp"
                   android:layout_height="50dp"
                   android:orientation="horizontal"
                   android:id="@+id/ll_menu_circle"
                   app:layout_constraintStart_toStartOf="parent"
+                  android:elevation="2dp"
+                  android:background="@color/background"
                   android:layout_marginStart="1dp"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="1dp"
@@ -41,6 +59,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/home"
                     android:gravity="center"
 
@@ -48,7 +67,6 @@
         </LinearLayout>
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
-
                       android:gravity="center"
                       android:id="@+id/btn_circle_circle"
                       android:layout_weight="1">
@@ -71,6 +89,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/profile"
                     android:gravity="center"
 
@@ -79,13 +98,14 @@
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:gravity="center"
-                      android:id="@+id/btn_circle_logout"
+                      android:id="@+id/btn_circle_settings"
                       android:layout_weight="1">
 
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/log_out"
+                    android:text="@string/settings"
+                    android:textColor="@color/black"
                     android:gravity="center"
 
             />
@@ -101,4 +121,4 @@
             app:layout_constraintBottom_toTopOf="@+id/ll_menu_circle" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="64dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="17dp" app:layout_constraintHorizontal_bias="0.123"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
