--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,9 +9,14 @@
 
     <LinearLayout android:layout_width="0dp"
                   android:layout_height="50dp"
-                  android:orientation="horizontal" app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent"
-                  app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="326dp"
+                  android:orientation="horizontal"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  android:layout_marginEnd="1dp"
+                  app:layout_constraintEnd_toEndOf="parent"
+                  app:layout_constraintStart_toStartOf="parent"
+                  android:layout_marginTop="326dp"
+                  android:elevation="2dp"
+                  android:background="@color/background"
                    android:id="@+id/linearLayout">
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
@@ -39,6 +44,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/circle"
                     android:gravity="center"
 
@@ -53,6 +59,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/profile"
                     android:gravity="center"
 
@@ -61,13 +68,14 @@
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:gravity="center"
-                      android:id="@+id/btn_logout"
+                      android:id="@+id/btn_settings"
                       android:layout_weight="1">
 
             <TextView
                     android:layout_width="wrap_content"
+                    android:textColor="@color/black"
                     android:layout_height="wrap_content"
-                    android:text="@string/log_out"
+                    android:text="@string/settings"
                     android:gravity="center"
 
             />
@@ -86,7 +94,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="162dp"
-            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="269dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="219dp"
+            app:layout_constraintHorizontal_bias="0.502"
+            android:layout_marginTop="269dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="219dp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
