--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".profile.ProfileActivity">
+    <RelativeLayout android:id="@+id/rl_profile_title"
+                    android:layout_width="match_parent"
+                    android:elevation="2dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/background"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginTop="10dp"
+                  android:layout_marginStart="20dp"
+                  android:layout_marginBottom="10dp"
+                  android:text="@string/profile"
+                  android:textColor="@color/blue"
+                  android:textSize="@dimen/page_title_textsize"/>
 
-    <TextView
-            android:text="@string/my_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_myprofile"
-            android:textSize="20sp"
-            android:textColor="@color/blue"
-            android:textAllCaps="false"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="56dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="165dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="182dp" app:layout_constraintHorizontal_bias="0.233"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_profile"
-            android:id="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="142dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="141dp" android:layout_marginTop="3dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_myprofile"/>
+    </RelativeLayout>
+    <LinearLayout android:id="@+id/ll_profile_avatar"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center"
+                  app:layout_constraintStart_toStartOf="parent"
+                  app:layout_constraintEnd_toEndOf="parent"
+                  app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="38dp"
+                  app:layout_constraintTop_toBottomOf="@+id/rl_profile_title">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_profile"
+                android:id="@+id/imageView"
+
+                android:contentDescription="@string/profile_picture"
+                app:layout_constraintTop_toTopOf="parent"/>
+    </LinearLayout>
+
     <TextView
             android:text="@string/dummy_name"
             android:layout_width="wrap_content"
@@ -38,7 +50,7 @@
             android:textColor="@color/black"
             android:id="@+id/tv_myname"
             android:layout_marginTop="31dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/ll_profile_avatar"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="175dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,10 +112,13 @@
                   android:orientation="horizontal"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginEnd="1dp"
+                  android:elevation="2dp"
                   app:layout_constraintEnd_toEndOf="parent"
+                  android:background="@color/background"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginTop="326dp"
-                  android:id="@+id/linearLayout">
+                  android:id="@+id/linearLayout"
+                  android:baselineAligned="false">
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:gravity="center"
@@ -113,7 +128,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
+                    android:textColor="@color/black"
                     android:text="@string/home"
                     android:gravity="center"
 
@@ -128,6 +143,7 @@
                       android:layout_weight="1">
 
             <TextView
+                    android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/circle"
@@ -153,16 +169,17 @@
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:gravity="center"
-                      android:id="@+id/btn_profile_logout"
+                      android:id="@+id/btn_profile_settings"
                       android:layout_weight="1">
 
             <TextView
+                    android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/log_out"
+                    android:text="@string/settings"
                     android:gravity="center"
 
             />
         </LinearLayout>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
