--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -50,7 +50,7 @@
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:inputType="textWebEmailAddress|textPersonName|text"
             android:ems="10"
             android:id="@+id/et_email"
             android:hint="@string/email"
@@ -69,12 +69,30 @@
             android:layout_height="43dp"
             android:textAllCaps="false"
             android:id="@+id/btn_register"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_email"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="99dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="103dp"
-            android:layout_marginBottom="290dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginBottom="172dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/et_register_retype"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/et_register_password" android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/et_email" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="99dp" android:hint="@string/password"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/et_register_retype" android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/et_register_password"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="99dp"
+            android:hint="@string/retype_password"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
