--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -74,8 +74,9 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="103dp"
             android:layout_marginBottom="172dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/et_register_retype"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.388"
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/et_register_retype"
+            app:layout_constraintVertical_bias="0.519"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
