implement sign in and sign out session

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".register.RegisterActivity">
+    <RelativeLayout android:id="@+id/rl_register_title"
+                    android:layout_width="match_parent"
+                    android:elevation="2dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/background"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+        <ImageView android:layout_width="20dp"
+                   android:layout_height="20dp"
+                   android:layout_marginTop="10dp"
+                   android:layout_marginBottom="10dp"
+                   android:layout_marginStart="20dp"
+                   app:srcCompat="@drawable/ic_arrow_back"
+                   android:id="@+id/btn_register_back"/>
 
+    </RelativeLayout>
     <TextView
             android:text="@string/registration"
             android:layout_width="wrap_content"
