--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/tv_login_email"
+            android:id="@+id/et_login_email"
             android:hint="@string/email_address" android:layout_marginTop="22dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_login_title" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent"
@@ -32,8 +32,8 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/tv_login_password" android:hint="@string/password" android:layout_marginTop="13dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_email" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/et_login_password" android:hint="@string/password" android:layout_marginTop="13dp"
+            app:layout_constraintTop_toBottomOf="@+id/et_login_email" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="100dp"/>
     <Button
@@ -46,7 +46,7 @@
             android:textAllCaps="false"
 
             android:id="@+id/btn_login" android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_password" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_login_password" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="161dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="162dp" tools:text="Login"/>
     <TextView
@@ -54,9 +54,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_login_hint_register"
-            android:layout_marginTop="184dp" app:layout_constraintTop_toBottomOf="@+id/btn_login"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="76dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="77dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="77dp" android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_login_register" app:layout_constraintHorizontal_bias="0.473"
+    />
     <Button
             android:text="@string/register"
             android:layout_width="209dp"
@@ -65,10 +66,9 @@
             android:textColor="@color/white"
             android:layout_height="43dp"
             android:textAllCaps="false"
-            android:id="@+id/btn_login_register" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_hint_register"
+            android:id="@+id/btn_login_register"
             android:layout_marginBottom="17dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="104dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="98dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
