--- a/app/src/main/res/layout/fragment_my_circle.xml
+++ b/app/src/main/res/layout/fragment_my_circle.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".circle.circlelist.mycircle.MyCircleFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="MyCircle"/>
+    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+                                                       android:layout_height="match_parent">
+
+        <TextView
+                android:text="@string/no_friends"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_circle_no_friends"
+                android:layout_marginTop="182dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_circle_title" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="43dp"/>
+        <TextView
+                android:text="@string/my_circle"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_circle_title"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="318dp"
+                app:layout_constraintHorizontal_bias="0.0"/>
+        <Button
+                android:text="@string/add_friend"
+                android:background="@drawable/btn_round_blue"
+                android:textSize="18sp"
+                android:layout_width="match_parent"
+                android:textColor="@color/white"
+                android:layout_height="wrap_content"
+                android:textAllCaps="false"
+                android:id="@+id/btn_add_friends"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="37dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_circle_no_friends"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
